--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
 									</li>
 									<li class="divider"></li>
 									<li>
-										<a th:href="@{logout}">
+										<a th:href="@{/Admin/logout}">
 											<i class="fa fa-sign-out"></i> 退出登录</a>
 									</li>
 								</ul>
